# kernel-harness

./: .gitignore  CLAUDE.md  CONTEXT.md  NOTICE  README.md  pyproject.toml
docs/agents/: issue-tracker.md
src/kernel_harness/: __init__.py  agent.py  backends.py  cli.py  config.py  evalproto.py  ledger.py  library.py  orchestrator.py  problem.py  seeds.py  subagents.py  tools.py  tui.py
tests/: test_agent.py  test_backends.py  test_cli.py  test_evalproto.py  test_foundation.py  test_ledger.py  test_library.py  test_orchestrator.py  test_research.py  test_seed_kernel.py  test_seeds.py  test_subagents.py  test_tui.py
