[project]
name = "kernel-harness"
version = "0.1.0"
description = "Agentic loop that writes, tests, profiles, and optimizes GPU kernels for hackathons"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.2.101",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "textual>=0.80",
    "chromadb>=0.5",
]

[project.scripts]
kernel-harness = "kernel_harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
